# SnowGame

./: .gitignore  CMakeLists.txt
AssetsSources/Art/: Previz.pmp
Sources/: Game.cpp  Game.h  Player.cpp  Player.h  RenderHandler.cpp  RenderHandler.h  main.cpp
Sources/GameObjects/: Snow.cpp  Snow.h
